# rust-browser-handler

./: .gitattributes  AGENTS.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.cargo/setup-dev/src/: main.rs
.devcontainer/: devcontainer.json
.github/hooks/: pre-commit
.github/workflows/: release.yml
packaging/desktop/: rust-browser-handler.desktop.in
src/: browser_discovery.rs  gui.rs  main.rs  registry_handler.rs
src/platform/: linux_impl.rs  mod.rs  windows_impl.rs
