[package]
name = "rust_browser_handler"
version = "0.1.0"
edition = "2024"
build = ".cargo/build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
url = "2.4"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
winapi = { version = "0.3.9", features = ["winuser", "wincon"] }

[dev-dependencies]
tempfile = "3.2"
