[package]
name = "rust_browser_handler"
version = "0.3.0"
edition = "2024"
build = ".cargo/build.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.10"
url = "2.5.8"
dirs = "6.0.0"
slint = { version = "1.16.1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-software"] }

[target.'cfg(target_os = "linux")'.dependencies]
fontique = { version = "0.8.0", default-features = false, features = ["fontconfig-dlopen"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
winapi = { version = "0.3.9", features = ["winuser", "wincon", "shellapi", "shlobj"] }

[dev-dependencies]
tempfile = "3.27.0"
